syntax = "proto3";

package pb;

option go_package = "github.com/Arthur199212/microservices-demo/src/pb";

message Address {
  string streetAddress = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  string zipCode = 5;
}
